--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "husky": "^8.0.3",
     "globals": "^15.15.0",
     "postcss": "^8.5.2",
     "prettier": "3.5.1",
